--- a/movieGEN/movieGEN/Views/Home/Details.cshtml
+++ b/movieGEN/movieGEN/Views/Home/Details.cshtml
@@ -3,136 +3,172 @@
 @{
     ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
-
-<h2>Details</h2>
-
-<div>
-    <h4>ImdbEntity</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Year)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Year)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Rated)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Rated)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Released)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Released)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Runtime)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Runtime)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Genre)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Genre)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Director)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Director)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Writer)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Writer)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Actors)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Actors)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Plot)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Plot)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Language)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Language)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Country)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Country)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Awards)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Awards)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Poster)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Poster)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Metascore)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Metascore)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.imdbRating)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.imdbRating)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.imdbVotes)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.imdbVotes)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.imdbID)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.imdbID)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Type)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Type)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Response)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Response)
-        </dd>
-    </dl>
+<script>
+    var imgUrl = '@Model.Poster';
+</script>
+<div class="w-100 p-3" style="height : 200px">
+    <img src="@Html.DisplayFor(model => model.Poster)" style="width : 120% ; height : 100%; object-fit : cover ; margin-left : -10%; margin-top : -2%" />
 </div>
+<br><br>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-3">
+            <img src="@Html.DisplayFor(model => model.Poster)" class="img-thumbnail" />
+        </div>
+        <div class="col-sm-9">
+            <h2><b>@Html.DisplayFor(model => model.Title)</b></h2>
+            <p><i class="fas fa-star"></i>@Html.DisplayFor(model => model.imdbRating)</p>
+            <button type="button" class="btn btn-light">Light</button>
+            <button type="button" class="btn btn-light">Light</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <h2 style="text-align : left">Résumé</h2>
+            <p>@Html.DisplayFor(model => model.Plot)</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <h2 style="text-align : left">Casting</h2>
+            <p>@Html.DisplayFor(model => model.Actors)</p>
+        </div>
+        <div class="col-sm-6">
+            <h2 style="text-align : left">Equipe</h2>
+            <p>@Html.DisplayFor(model => model.Writer)</p>
+            <p> @Html.DisplayFor(model => model.Director) </p>
+        </div>
+    </div>
+</div>
+</div>
+@*<div>
+        <h4>ImdbEntity</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Title)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Title)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Year)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Year)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Rated)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Rated)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Released)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Released)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Runtime)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Runtime)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Genre)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Genre)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Director)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Director)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Writer)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Writer)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Actors)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Actors)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Plot)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Plot)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Language)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Language)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Country)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Country)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Awards)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Awards)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Poster)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Poster)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Metascore)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Metascore)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.imdbRating)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.imdbRating)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.imdbVotes)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.imdbVotes)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.imdbID)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.imdbID)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Type)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Type)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Response)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Response)
+            </dd>
+        </dl>
+    </div>*@
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
