--- a/movieGEN/movieGEN/Views/Home/Index.cshtml
+++ b/movieGEN/movieGEN/Views/Home/Index.cshtml
@@ -3,7 +3,17 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ImdbEntity[] col1 = Model.Take(8).ToArray();
+    ImdbEntity[] col1 = new ImdbEntity[8];
+    int pos = 0;
+    foreach (var item in Model)
+    {
+        if (pos <= 7)
+        {
+            col1[pos] = item;
+            pos++;
+        }
+    }
+    //col1 = Model.Take(8).ToArray();
 
 }
 <form class="col-md-12" method="get" action="@Url.Action("Index", "Home")" style="margin-top: 10px">
@@ -17,23 +27,26 @@
         <div class="container row col-md-12" id="FilmIndex">
             @for (int i1 = 0; i1 < 4; i1++)
             {
-                <div class="col-md-3">
-                    <div class="col-md-12">
-                        <img class="col-md-6 img-fluid" style="" src="@col1[((i * 4) + i1)].Poster" alt="@col1[((i * 4) + i1)].Title" />
+                if (@col1[((i * 4) + i1)] != null)
+                {
+                    <div class="col-md-3">
+                        <div class="col-md-12">
+                            <img class="col-md-6 img-fluid" style="" src="@col1[((i * 4) + i1)].Poster" alt="@col1[((i * 4) + i1)].Title" />
+                        </div>
+                        <br>
+                        <div class="col-md-12">
+                            <p class="rounded float-left">@col1[((i * 4) + i1)].Title</p>
+                            <form method="post">
+                                <button class="rounded float-right" asp-action="Details" asp-route-imdbID="@col1[((i * 4) + i1)].imdbID">Détails</button>
+                            </form>
+                        </div>
                     </div>
-                    <br>
-                    <div class="col-md-12">
-                        <p class="rounded float-left">@col1[((i * 4) + i1)].Title</p>
-                        <form method="post">
-                            <button class="rounded float-right" asp-action="Details" asp-route-imdbID="@col1[((i * 4) + i1)].imdbID">Détails</button>
-                        </form>
-                    </div>
-                </div>
+                }
             }
         </div>
 
     }
-    <div class="container row col-md-12" >
+    <div class="container row col-md-12">
         @if (ViewData["PreviousPage"] != null)
         {
             <a asp-controller="Home" asp-action="Index" asp-route-search=@ViewData["search"] asp-route-page=@ViewData["PreviousPage"]>
