--- a/movieGEN/movieGEN/wwwroot/css/site.css
+++ b/movieGEN/movieGEN/wwwroot/css/site.css
@@ -1,7 +1,4 @@
-﻿body {
-    border: 1px solid #707070;
-}
-#FilmIndex {
+﻿#FilmIndex {
     margin-top: 2%;
     text-align: center;
     margin-left: auto;
