--- a/movieGEN/movieGEN/Views/Home/Index.cshtml
+++ b/movieGEN/movieGEN/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 
 }
 <form class="col-md-12" method="get" action="@Url.Action("Index", "Home")" style="margin-top: 10px">
-    <input class="col-md-12" type="text" name="search" id="search" />
+    <input class="col-md-12" type="text" name="search" id="search" placeholder="Rechercher : " />
     <button style="visibility:hidden" type="submit" id="searchButton">Rechercher</button>
 </form>
 @if (Model.Count != 0)
@@ -38,11 +38,10 @@
                             </form>
                         </div>
                     </div>
-                    <br><br>
                 }
             }
         </div>
-
+        <br>
     }
     <div class="container row col-md-12">
         @if (ViewData["PreviousPage"] != null)
