Ebay fonctionnel + fix bug "&" dans recherche par "%26"

--- a/movieGEN/movieGEN/Views/Home/Index.cshtml
+++ b/movieGEN/movieGEN/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         }
     }
 
-    string targetLanguage = "eng";
+    string targetLanguage = "fr";
     string sourceLanguage = null; // automatically detected
     var client = Google.Cloud.Translation.V2.TranslationClient.Create();
 
