--- a/movieGEN/movieGEN/Views/Home/Details.cshtml
+++ b/movieGEN/movieGEN/Views/Home/Details.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    string targetLanguage = "eng";
+    string targetLanguage = "fr";
     string sourceLanguage = null; // automatically detected
     var client = Google.Cloud.Translation.V2.TranslationClient.Create();
 }
