--- a/movieGEN/movieGEN/Views/Home/ListEbay.cshtml
+++ b/movieGEN/movieGEN/Views/Home/ListEbay.cshtml
@@ -1,81 +1,91 @@
-﻿
+﻿@model List<Ebay>
 @{
     ViewData["Title"] = "ListEbay";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    string targetLanguage = "eng";
+    string targetLanguage = "fr";
     string sourceLanguage = null; // automatically detected
     var client = Google.Cloud.Translation.V2.TranslationClient.Create();
 }
 
 <h2>@System.Web.HttpUtility.HtmlDecode(client.TranslateHtml("Article de Ebay", targetLanguage, sourceLanguage).TranslatedText)</h2>
 <div id="results"></div>
-
+<table width="100%" border="0" cellspacing="0" cellpadding="3">
+    <tbody>
+        @foreach (var item in Model)
+        {
+        <tr>
+            <td><img src="@item.galleryURL" border="0"></td>
+            <td><a href=" @item.viewItemURL" target="_blank">@item.title</a></td>
+        </tr>
+        }
+    </tbody>
+</table>
 <script>
     // Parse the response and build an HTML table to display search results
-    function _cb_findItemsByKeywords(root) {
-        //console.log("test");
-        var items = root.findItemsByKeywordsResponse[0].searchResult[0].item || [];
-        var html = [];
-        html.push('<table width="100%" border="0" cellspacing="0" cellpadding="3"><tbody>');
-        for (var i = 0; i < items.length; ++i) {
-            var item = items[i];
-            var title = item.title;
-            var pic = item.galleryURL;
-            var viewitem = item.viewItemURL;
-            if (null != title && null != viewitem) {
-                html.push('<tr><td>' + '<img src="' + pic + '" border="0">' + '</td>' +
-                    '<td><a href="' + viewitem + '" target="_blank">' + title + '</a></td></tr>');
-            }
-        }
-        html.push('</tbody></table>');
-        document.getElementById("results").innerHTML = html.join("");
+    @*function _cb_findItemsByKeywords(root) {
+    console.debug("je fonctionne");
+    var items = root.findItemsByKeywordsResponse[0].searchResult[0].item || [];
+    var html = [];
+    html.push('<table width="100%" border="0" cellspacing="0" cellpadding="3"><tbody>');
+    for (var i = 0; i < items.length; ++i) {
+    var item     = items[i];
+    var title    = item.title;
+    var pic      = item.galleryURL;
+    var viewitem = item.viewItemURL;
+    if (null != title && null != viewitem) {
+      html.push('<tr><td>' + '<img src="' + pic + '" border="0">' + '</td>' +
+      '<td><a href="' + viewitem + '" target="_blank">' + title + '</a></td></tr>');
+    }
+  }
+  html.push('</tbody></table>');
+  document.getElementById("results").innerHTML = html.join("");
     }  // End _cb_findItemsByKeywords() function
 
     // Create a JavaScript array of the item filters you want to use in your request
     var filterarray = [
-        {
-            "name": "MaxPrice",
-            "value": "25",
-            "paramName": "Currency",
-            "paramValue": "USD"
-        },
-        {
-            "name": "FreeShippingOnly",
-            "value": "true",
-            "paramName": "",
-            "paramValue": ""
-        },
-        {
-            "name": "ListingType",
-            "value": ["AuctionWithBIN", "FixedPrice"],
-            "paramName": "",
-            "paramValue": ""
-        },
+    {
+    "name": "MaxPrice",
+    "value": "25",
+    "paramName": "Currency",
+    "paramValue": "USD"
+    },
+    {
+    "name": "FreeShippingOnly",
+    "value": "true",
+    "paramName": "",
+    "paramValue": ""
+    },
+    {
+    "name": "ListingType",
+    "value": ["AuctionWithBIN", "FixedPrice"],
+    "paramName": "",
+    "paramValue": ""
+    },
     ];
     // Define global variable for the URL filter
     var urlfilter = "";
-        // Generates an indexed URL snippet from the array of item filters
+    // Generates an indexed URL snippet from the array of item filters
     function buildURLArray() {
-        // Iterate through each filter in the array
-        for (var i = 0; i < filterarray.length; i++) {
-            //Index each item filter in filterarray
-            var itemfilter = filterarray[i];
-            // Iterate through each parameter in each item filter
-            for (var index in itemfilter) {
-                // Check to see if the paramter has a value (some don't)
-                if (itemfilter[index] !== "") {
-                    if (itemfilter[index] instanceof Array) {
-                        for (var r = 0; r < itemfilter[index].length; r++) {
-                            var value = itemfilter[index][r];
-                            urlfilter += "&itemFilter\(" + i + "\)." + index + "\(" + r + "\)=" + value;
-                        }
-                    }
-                    else {
-                        urlfilter += "&itemFilter\(" + i + "\)." + index + "=" + itemfilter[index];
-                    }
-                }
-            }
-        }
+    // Iterate through each filter in the array
+    for (var i = 0; i < filterarray.length; i++) {
+    //Index each item filter in filterarray
+    var itemfilter = filterarray[i];
+    // Iterate through each parameter in each item filter
+    for (var index in itemfilter) {
+    // Check to see if the paramter has a value (some don't)
+    if (itemfilter[index] !== "") {
+    if (itemfilter[index] instanceof Array) {
+    for (var r = 0; r < itemfilter[index].length; r++) {
+    var value = itemfilter[index][r];
+    urlfilter += "&itemFilter\(" + i + "\)." + index + "\(" + r + "\)=" + value;
+    }
+    }
+    else {
+    urlfilter += "&itemFilter\(" + i + "\)." + index + "=" + itemfilter[index];
+    }
+    }
+    }
+    }
     }  // End buildURLArray() function
 
     // Execute the function to build the URL filter
@@ -87,15 +97,17 @@
     url += "&SECURITY-APPNAME=SamuelDe-movieGEN-PRD-9dfe51816-c0152236";
     url += "&GLOBAL-ID=EBAY-US";
     url += "&RESPONSE-DATA-FORMAT=JSON";
-    url += "&callback=_cb_findItemsByKeywords";
+    //url += "&callback=_cb_findItemsByKeywords";
     url += "&REST-PAYLOAD";
-    url += "&keywords=@ViewData["Film"]";
-    url += "&paginationInput.entriesPerPage=20";
+    url += "&keywords=@recherche";
+    url += "&paginationInput.entriesPerPage=3";
 
     url += urlfilter;
     // Submit the request
     s = document.createElement('script'); // create script element
+    //s.setAttribute('type', 'application/json');
     s.src = url;
-    document.body.appendChild(s);
+
+    document.body.appendChild(s);*@
 </script>
 
