--- a/movieGEN/movieGEN/Views/_ViewImports.cshtml
+++ b/movieGEN/movieGEN/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using movieGEN.Models
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.Extensions.Options
+@using movieGEN.Controllers
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, movieGEN
