--- a/movieGEN/movieGEN/Views/Home/about.cshtml
+++ b/movieGEN/movieGEN/Views/Home/about.cshtml
@@ -54,7 +54,11 @@
         <br><br>
         <div class="col-sm-12">
             <h1 style="font-size : 400%;" class="rainbow rainbow_text_animated">MovieGen</h1>
-
+            <br><br>
+            <h3 class="rainbow rainbow_text_animated">Ebay</h3>
+            <h3 class="rainbow rainbow_text_animated">OMDB</h3>
+            <h3 class="rainbow rainbow_text_animated">Youtube</h3>
+            <h3 class="rainbow rainbow_text_animated">Google traduction</h3>
         </div>
         <br><br>
     </div>
