--- a/movieGEN/movieGEN/wwwroot/css/site.css
+++ b/movieGEN/movieGEN/wwwroot/css/site.css
@@ -10,3 +10,10 @@
     opacity: 0.7;
     padding-bottom: 20px;
 }
+.center {
+    margin: auto;
+    margin-left:auto;
+    margin-right:auto;
+    width: 15%;
+    padding: 10px;
+}
